# image-sync

./: .imgbotconfig  .prettierignore  .prettierrc  README.md  dev_setup.sh  docker-compose.yml  package.json  renovate.json
.github/workflows/: CI.yml
assets/: README.md
desktop/: package.json
desktop-lite/: README.md  package.json
desktop-lite/src/: App.tsx  index.tsx
desktop-lite/src-tauri/: Cargo.toml  tauri.conf.json
desktop-lite/src-tauri/icons/: icon.icns
desktop-lite/src-tauri/src/: main.rs
desktop/src/: App.tsx  index.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/utils/: auth.rs
mobile/: .gitignore  app.json  eas.json  package.json  style.ts
mobile/app/: index.tsx  settings.tsx
mobile/app/oauth/: index.tsx
mobile/lib/: localSettings.tsx
rust-lib/: Cargo.toml
rust-lib/src/: auth.rs
scripts/: subsituteGitSHAIntoCargoVersion.js  updateDevVersion.js
web/: .env.example  Dockerfile  Gemfile  Procfile.dev
web/app/controllers/: application_controller.rb  auth_controller.rb  auth_verifications_controller.rb  collections_controller.rb  user_controller.rb
web/app/helpers/: application_helper.rb
web/app/jobs/: cleanup_sessions_job.rb
web/app/mailers/: application_mailer.rb  auth_mailer.rb
web/app/models/: collection.rb  image.rb  user.rb  user_session.rb
web/app/services/: user_login.rb
web/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  puma.rb  routes.rb  schedule.rb  solid_queue.yml  storage.yml  tailwind.config.js
web/config/environments/: development.rb  production.rb  test.rb
web/config/initializers/: doorkeeper.rb  doorkeeper_device_authorization_grant.rb
web/config/locales/: doorkeeper.en.yml
web/db/: schema.rb
web/db/migrate/: 20231230101657_create_users.rb  20231230120226_create_doorkeeper_tables.rb  20240205132451_create_images.rb  (+4 more)
(+14 files in other folders)
